Fix spacing

--- a/sass/ichb.scss
+++ b/sass/ichb.scss
@@ -323,7 +323,7 @@ tfoot td {
 
         @include medium {
             height: 1.0rem;
-            margin: 0.5rem 0 3.0rem 0.5rem;
+            margin: 0.5rem 0 6.0rem 0.5rem;
             font-size: 3.0rem;
             border: 0.1rem solid $primary-mid;
             position: initial;
